--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="container">
                         <div class="row align-items-center">
                             <div class="col-md-12">
-                                <h6 class="wow fadeInUp" data-wow-delay=".4s"><span class="id-color">I Am Sally Turner</span></h6>
+                                <h6 class="wow fadeInUp" data-wow-delay=".4s"><span class="id-color">Assalamu Alaikum, I am Mehedi Hasan Shojib</span></h6>
                                 <div class="spacer-10"></div>
                                 <div class="h1_big wow fadeInUp" data-wow-delay=".6s">
                                     <div class="typed-strings">
