--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
              <!-- load external content close -->
 
             <section aria-label="section" class="jarallax no-top no-bottom">
-                <img src="images/background/l1.jpg" class="jarallax-img" alt="">
+                <img src="images/background/20221108_170344.jpg" class="jarallax-img" alt="">
                 <div class="v-center">
                     <div class="container">
                         <div class="row align-items-center">
