--- a/index.html
+++ b/index.html
@@ -529,16 +529,16 @@
                 <div class="row">
                     <div class="col-md-6">
                         <a href="index.html">
-                            <span class="copy">&copy; Copyright 2022 - Kyros by Designesia</span>
+                            <span class="copy">&copy; Copyright 2022 - Mehedi Hasan Shojib</span>
                         </a>
                     </div>
                     <div class="col-md-6">
                         <div class="social-icons">
-                            <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-linkedin fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-pinterest fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-rss fa-lg"></i></a>
+                            <a href="https://www.facebook.com/Jr.Xci"><i class="fa fa-facebook fa-lg"></i></a>
+                            <a href="https://twitter.com/5hojib"><i class="fa fa-twitter fa-lg"></i></a>
+                            <a href="https://instagram.com/5hojib"><i class="fa fa-instagram fa-lg"></i></a>
+                            <a href="https://linkedin.com/5hojib"><i class="fa fa-linkedin fa-lg"></i></a>
+                            <a href="https://JuniorXcientist.t.me"><i class="fa fa-telegram fa-lg"></i></a>
                         </div>
                     </div>
                 </div>
