--- a/index.html
+++ b/index.html
@@ -502,17 +502,17 @@
                                 <div class="col-md-4">
                                     <div class="wm-1"></div>
                                     <h6>Email Me</h6>
-                                    <p>contact@kyrosnoriaki.com</p>
+                                    <p>yesiamshojib@gmail.com</p>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="wm-1"></div>
                                     <h6>Call Me</h6>
-                                    <p>+1 700 333 92 96</p>
+                                    <p>+880 199 639 7244</p>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="wm-1"></div>
                                     <h6>Address</h6>
-                                    <p>Collins Street West, Louisiana, Bayerfurt, USA</p>
+                                    <p>Islampur, Tarakanda, Mymensingh, Bangladesh</p>
                                 </div>
                             </div>
                         </div>
