--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <div class="space-border"></div>
                         </div>
                         <div class="col-md-8 offset-md-2 text-center wow fadeInUp">
-                            <p>Maybe, I am a website designer from Lousiana, with a strong focus in UI/UX design. I love to get new experiences and always learn from my surroundings. I've done more than 285 projects. You can check it through portfolio section on
+                            <p>Maybe, Umm I am a website designer from Lousiana, with a strong focus in UI/UX design. I love to get new experiences and always learn from my surroundings. I've done more than 285 projects. You can check it through portfolio section on
                                 this website. I looking forward to any opportunities and challenges. </p>
                         </div>
                         <div class="spacer-single"></div>
